<resources>
    <string name="app_name">RundaySOPT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--용민-->
    <string name="home">홈</string>
    <string name="record">기록</string>
    <string name="crew">크루</string>
    <string name="challenge">챌린지</string>
    <string name="my_menu">MY메뉴</string>
    <string name="my_exercise">나의 운동</string>
    <string name="level_exercise">레벨 운동</string>
    <string name="time_exercise">시간 운동</string>
    <string name="custom_exercise">맞춤 운동</string>
</resources>