<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/icon_home_selector"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_record"
        android:icon="@drawable/icon_record_selector"
        android:title="@string/record" />
    <item
        android:id="@+id/menu_crew"
        android:icon="@drawable/icon_crew_selector"
        android:title="@string/crew" />
    <item
        android:id="@+id/menu_challenge"
        android:icon="@drawable/icon_challenge_selector"
        android:title="@string/challenge" />
    <item
        android:id="@+id/menu_my_menu"
        android:icon="@drawable/icon_mymenu_selector"
        android:title="@string/my_menu" />
</menu>